# AEDIII

./: .gitignore  README.md  README.rst
TSP/: README.md  README.rst  pyproject.toml
TSP/src/: christofides.py  tsp.py
TSP/src/data/matrizes/: tsp2_1248.txt
TSP/src/data/resultados/: resultados.csv
TSP/src/tools/: Readme.md  tools.py
TSP/tests/: test_tsp.py
TSP/tsp/: tsp.py
TSP/tsp/tools/: Readme.md  tools.py
