[tool.poetry]
name = "TSP"
version = "0.1.0"
description = ""
authors = ["Diaszano <lucasdiiassantos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
networkx = "^2.8.6"
pytsp = "^0.2.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
